// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transfer should render correctly 1`] = `
<div>
  <div
    class="fishd-transfer"
  >
    <div
      class="fishd-transfer-list"
    >
      <div
        class="fishd-transfer-list-header"
      >
        <label
          class="fishd-checkbox-wrapper"
        >
          <span
            class="fishd-checkbox fishd-checkbox-checked"
          >
            <input
              checked=""
              class="fishd-checkbox-input"
              type="checkbox"
            />
            <span
              class="fishd-checkbox-inner"
            />
          </span>
        </label>
        <span
          class="fishd-transfer-list-header-title"
        />
        <span
          class="fishd-transfer-list-header-selected"
        >
          1/2 
        </span>
      </div>
      <div
        class="fishd-transfer-list-body"
      >
        <ul
          class="fishd-transfer-list-content"
        >
          <li
            class="fishd-transfer-list-content-item"
          >
            <span
              class="fishd-transfer-list-content-item-text"
            >
              <label
                class="fishd-checkbox-wrapper"
              >
                <span
                  class="fishd-checkbox fishd-checkbox-checked"
                >
                  <input
                    checked=""
                    class="fishd-checkbox-input"
                    type="checkbox"
                  />
                  <span
                    class="fishd-checkbox-inner"
                  />
                </span>
              </label>
              <span />
            </span>
          </li>
          <li
            class="fishd-transfer-list-content-item fishd-transfer-list-content-item-disabled"
          >
            <span
              class="fishd-transfer-list-content-item-text"
            >
              <label
                class="fishd-checkbox-wrapper"
              >
                <span
                  class="fishd-checkbox fishd-checkbox-disabled"
                >
                  <input
                    class="fishd-checkbox-input"
                    disabled=""
                    type="checkbox"
                  />
                  <span
                    class="fishd-checkbox-inner"
                  />
                </span>
              </label>
              <span />
            </span>
          </li>
        </ul>
        <div
          class="fishd-transfer-list-body-not-found"
        >
          暂无相关信息
        </div>
      </div>
    </div>
    <div
      class="fishd-transfer-operation"
    >
      <button
        class="fishd-btn fishd-btn-primary fishd-btn-sm fishd-btn-icon-only"
        type="button"
      >
        <i
          class="fishdicon fishdicon-right"
        />
      </button>
      <button
        class="fishd-btn fishd-btn-primary fishd-btn-sm fishd-btn-icon-only"
        disabled=""
        type="button"
      >
        <i
          class="fishdicon fishdicon-left"
        />
      </button>
    </div>
    <div
      class="fishd-transfer-list"
    >
      <div
        class="fishd-transfer-list-header"
      >
        <label
          class="fishd-checkbox-wrapper"
        >
          <span
            class="fishd-checkbox"
          >
            <input
              class="fishd-checkbox-input"
              type="checkbox"
            />
            <span
              class="fishd-checkbox-inner"
            />
          </span>
        </label>
        <span
          class="fishd-transfer-list-header-title"
        />
        <span
          class="fishd-transfer-list-header-selected"
        >
          0/1 
        </span>
      </div>
      <div
        class="fishd-transfer-list-body"
      >
        <ul
          class="fishd-transfer-list-content"
        >
          <li
            class="fishd-transfer-list-content-item"
          >
            <span
              class="fishd-transfer-list-content-item-text"
            >
              <label
                class="fishd-checkbox-wrapper"
              >
                <span
                  class="fishd-checkbox"
                >
                  <input
                    class="fishd-checkbox-input"
                    type="checkbox"
                  />
                  <span
                    class="fishd-checkbox-inner"
                  />
                </span>
              </label>
              <span />
            </span>
          </li>
        </ul>
        <div
          class="fishd-transfer-list-body-not-found"
        >
          请从左侧选择添加
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Transfer should show sorted targetkey 1`] = `
<div>
  <div
    class="fishd-transfer"
  >
    <div
      class="fishd-transfer-list"
    >
      <div
        class="fishd-transfer-list-header"
      >
        <label
          class="fishd-checkbox-wrapper"
        >
          <span
            class="fishd-checkbox"
          >
            <input
              class="fishd-checkbox-input"
              type="checkbox"
            />
            <span
              class="fishd-checkbox-inner"
            />
          </span>
        </label>
        <span
          class="fishd-transfer-list-header-title"
        />
        <span
          class="fishd-transfer-list-header-selected"
        >
          0/1 
        </span>
      </div>
      <div
        class="fishd-transfer-list-body"
      >
        <ul
          class="fishd-transfer-list-content"
        >
          <li
            class="fishd-transfer-list-content-item"
            title="a"
          >
            <span
              class="fishd-transfer-list-content-item-text"
            >
              <label
                class="fishd-checkbox-wrapper"
              >
                <span
                  class="fishd-checkbox"
                >
                  <input
                    class="fishd-checkbox-input"
                    type="checkbox"
                  />
                  <span
                    class="fishd-checkbox-inner"
                  />
                </span>
              </label>
              <span>
                a
              </span>
            </span>
          </li>
        </ul>
        <div
          class="fishd-transfer-list-body-not-found"
        >
          暂无相关信息
        </div>
      </div>
    </div>
    <div
      class="fishd-transfer-operation"
    >
      <button
        class="fishd-btn fishd-btn-primary fishd-btn-sm fishd-btn-icon-only"
        disabled=""
        type="button"
      >
        <i
          class="fishdicon fishdicon-right"
        />
      </button>
      <button
        class="fishd-btn fishd-btn-primary fishd-btn-sm fishd-btn-icon-only"
        disabled=""
        type="button"
      >
        <i
          class="fishdicon fishdicon-left"
        />
      </button>
    </div>
    <div
      class="fishd-transfer-list"
    >
      <div
        class="fishd-transfer-list-header"
      >
        <label
          class="fishd-checkbox-wrapper"
        >
          <span
            class="fishd-checkbox"
          >
            <input
              class="fishd-checkbox-input"
              type="checkbox"
            />
            <span
              class="fishd-checkbox-inner"
            />
          </span>
        </label>
        <span
          class="fishd-transfer-list-header-title"
        />
        <span
          class="fishd-transfer-list-header-selected"
        >
          0/2 
        </span>
      </div>
      <div
        class="fishd-transfer-list-body"
      >
        <ul
          class="fishd-transfer-list-content"
        >
          <li
            class="fishd-transfer-list-content-item"
            title="c"
          >
            <span
              class="fishd-transfer-list-content-item-text"
            >
              <label
                class="fishd-checkbox-wrapper"
              >
                <span
                  class="fishd-checkbox"
                >
                  <input
                    class="fishd-checkbox-input"
                    type="checkbox"
                  />
                  <span
                    class="fishd-checkbox-inner"
                  />
                </span>
              </label>
              <span>
                c
              </span>
            </span>
          </li>
          <li
            class="fishd-transfer-list-content-item"
            title="b"
          >
            <span
              class="fishd-transfer-list-content-item-text"
            >
              <label
                class="fishd-checkbox-wrapper"
              >
                <span
                  class="fishd-checkbox"
                >
                  <input
                    class="fishd-checkbox-input"
                    type="checkbox"
                  />
                  <span
                    class="fishd-checkbox-inner"
                  />
                </span>
              </label>
              <span>
                b
              </span>
            </span>
          </li>
        </ul>
        <div
          class="fishd-transfer-list-body-not-found"
        >
          请从左侧选择添加
        </div>
      </div>
    </div>
  </div>
</div>
`;
